HEMOS CAMBIADO LAS RUTAS A ABSOLUTAS

--- a/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
@@ -9,115 +9,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
       "Epoch 1/50\n",
-      "46/46 [==============================] - 1s 1ms/step - loss: 0.6944 - accuracy: 0.4837\n",
+      "WARNING:tensorflow:From c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "46/46 [==============================] - 1s 1ms/step - loss: 0.6926 - accuracy: 0.5207\n",
       "Epoch 2/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.6669 - accuracy: 0.6993\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.6509 - accuracy: 0.6841\n",
       "Epoch 3/50\n",
-      "46/46 [==============================] - 0s 990us/step - loss: 0.6146 - accuracy: 0.7211\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.5819 - accuracy: 0.7582\n",
       "Epoch 4/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.5037 - accuracy: 0.7996\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.4672 - accuracy: 0.8017\n",
       "Epoch 5/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.3661 - accuracy: 0.8519\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.3352 - accuracy: 0.8802\n",
       "Epoch 6/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.2325 - accuracy: 0.9085\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.2079 - accuracy: 0.9434\n",
       "Epoch 7/50\n",
-      "46/46 [==============================] - 0s 898us/step - loss: 0.1301 - accuracy: 0.9739\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.1322 - accuracy: 0.9651\n",
       "Epoch 8/50\n",
-      "46/46 [==============================] - 0s 846us/step - loss: 0.0646 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0795 - accuracy: 0.9804\n",
       "Epoch 9/50\n",
-      "46/46 [==============================] - 0s 844us/step - loss: 0.0466 - accuracy: 0.9869\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0451 - accuracy: 0.9891\n",
       "Epoch 10/50\n",
-      "46/46 [==============================] - 0s 822us/step - loss: 0.0363 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0331 - accuracy: 0.9891\n",
       "Epoch 11/50\n",
-      "46/46 [==============================] - 0s 836us/step - loss: 0.0301 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0295 - accuracy: 0.9913\n",
       "Epoch 12/50\n",
-      "46/46 [==============================] - 0s 873us/step - loss: 0.0261 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0262 - accuracy: 0.9891\n",
       "Epoch 13/50\n",
-      "46/46 [==============================] - 0s 834us/step - loss: 0.0277 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0244 - accuracy: 0.9891\n",
       "Epoch 14/50\n",
-      "46/46 [==============================] - 0s 845us/step - loss: 0.0267 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0198 - accuracy: 0.9935\n",
       "Epoch 15/50\n",
-      "46/46 [==============================] - 0s 850us/step - loss: 0.0312 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0252 - accuracy: 0.9891\n",
       "Epoch 16/50\n",
-      "46/46 [==============================] - 0s 837us/step - loss: 0.0212 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0237 - accuracy: 0.9935\n",
       "Epoch 17/50\n",
-      "46/46 [==============================] - 0s 837us/step - loss: 0.0190 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0193 - accuracy: 0.9913\n",
       "Epoch 18/50\n",
-      "46/46 [==============================] - 0s 827us/step - loss: 0.0197 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0204 - accuracy: 0.9913\n",
       "Epoch 19/50\n",
-      "46/46 [==============================] - 0s 842us/step - loss: 0.0178 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0229 - accuracy: 0.9891\n",
       "Epoch 20/50\n",
-      "46/46 [==============================] - 0s 831us/step - loss: 0.0192 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0214 - accuracy: 0.9891\n",
       "Epoch 21/50\n",
-      "46/46 [==============================] - 0s 916us/step - loss: 0.0159 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0172 - accuracy: 0.9869\n",
       "Epoch 22/50\n",
-      "46/46 [==============================] - 0s 850us/step - loss: 0.0211 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0201 - accuracy: 0.9913\n",
       "Epoch 23/50\n",
-      "46/46 [==============================] - 0s 886us/step - loss: 0.0211 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0213 - accuracy: 0.9891\n",
       "Epoch 24/50\n",
-      "46/46 [==============================] - 0s 840us/step - loss: 0.0224 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0138 - accuracy: 0.9891\n",
       "Epoch 25/50\n",
-      "46/46 [==============================] - 0s 854us/step - loss: 0.0238 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0168 - accuracy: 0.9913\n",
       "Epoch 26/50\n",
-      "46/46 [==============================] - 0s 890us/step - loss: 0.0157 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 3ms/step - loss: 0.0201 - accuracy: 0.9891\n",
       "Epoch 27/50\n",
-      "46/46 [==============================] - 0s 856us/step - loss: 0.0200 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0149 - accuracy: 0.9935\n",
       "Epoch 28/50\n",
-      "46/46 [==============================] - 0s 880us/step - loss: 0.0209 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0152 - accuracy: 0.9935\n",
       "Epoch 29/50\n",
-      "46/46 [==============================] - 0s 890us/step - loss: 0.0166 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0146 - accuracy: 0.9913\n",
       "Epoch 30/50\n",
-      "46/46 [==============================] - 0s 872us/step - loss: 0.0200 - accuracy: 0.9869\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0200 - accuracy: 0.9869\n",
       "Epoch 31/50\n",
-      "46/46 [==============================] - 0s 884us/step - loss: 0.0148 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0176 - accuracy: 0.9913\n",
       "Epoch 32/50\n",
-      "46/46 [==============================] - 0s 850us/step - loss: 0.0159 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0149 - accuracy: 0.9913\n",
       "Epoch 33/50\n",
-      "46/46 [==============================] - 0s 845us/step - loss: 0.0150 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0150 - accuracy: 0.9913\n",
       "Epoch 34/50\n",
-      "46/46 [==============================] - 0s 817us/step - loss: 0.0155 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0161 - accuracy: 0.9935\n",
       "Epoch 35/50\n",
-      "46/46 [==============================] - 0s 874us/step - loss: 0.0140 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0118 - accuracy: 0.9935\n",
       "Epoch 36/50\n",
-      "46/46 [==============================] - 0s 908us/step - loss: 0.0116 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0172 - accuracy: 0.9913\n",
       "Epoch 37/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0102 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0144 - accuracy: 0.9935\n",
       "Epoch 38/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0126 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0168 - accuracy: 0.9869\n",
       "Epoch 39/50\n",
-      "46/46 [==============================] - 0s 997us/step - loss: 0.0142 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0151 - accuracy: 0.9913\n",
       "Epoch 40/50\n",
-      "46/46 [==============================] - 0s 884us/step - loss: 0.0132 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 3ms/step - loss: 0.0153 - accuracy: 0.9869\n",
       "Epoch 41/50\n",
-      "46/46 [==============================] - 0s 918us/step - loss: 0.0142 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0144 - accuracy: 0.9913\n",
       "Epoch 42/50\n",
-      "46/46 [==============================] - 0s 823us/step - loss: 0.0132 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0127 - accuracy: 0.9935\n",
       "Epoch 43/50\n",
-      "46/46 [==============================] - 0s 844us/step - loss: 0.0129 - accuracy: 0.9869\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0135 - accuracy: 0.9913\n",
       "Epoch 44/50\n",
-      "46/46 [==============================] - 0s 904us/step - loss: 0.0142 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 3ms/step - loss: 0.0140 - accuracy: 0.9935\n",
       "Epoch 45/50\n",
-      "46/46 [==============================] - 0s 885us/step - loss: 0.0141 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0161 - accuracy: 0.9935\n",
       "Epoch 46/50\n",
-      "46/46 [==============================] - 0s 808us/step - loss: 0.0128 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 933us/step - loss: 0.0123 - accuracy: 0.9913\n",
       "Epoch 47/50\n",
-      "46/46 [==============================] - 0s 846us/step - loss: 0.0124 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 974us/step - loss: 0.0138 - accuracy: 0.9891\n",
       "Epoch 48/50\n",
-      "46/46 [==============================] - 0s 855us/step - loss: 0.0106 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 3ms/step - loss: 0.0128 - accuracy: 0.9913\n",
       "Epoch 49/50\n",
-      "46/46 [==============================] - 0s 911us/step - loss: 0.0145 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 959us/step - loss: 0.0122 - accuracy: 0.9891\n",
       "Epoch 50/50\n",
-      "46/46 [==============================] - 0s 881us/step - loss: 0.0132 - accuracy: 0.9913\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 2.5876 - accuracy: 0.5826\n",
-      "Precisión en el conjunto de prueba: 0.582608699798584\n"
+      "46/46 [==============================] - 0s 956us/step - loss: 0.0132 - accuracy: 0.9913\n",
+      "4/4 [==============================] - 0s 3ms/step - loss: 2.2574 - accuracy: 0.6000\n",
+      "Precisión en el conjunto de prueba: 0.6000000238418579\n"
      ]
     }
    ],
@@ -131,7 +149,7 @@
     "from tensorflow.keras.layers import Dense\n",
     "\n",
     "# Carga los datos\n",
-    "data = pd.read_csv('../data/partidos_limpio.csv')\n",
+    "data = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_limpio.csv')\n",
     "\n",
     "# Preparar las etiquetas binarias para los resultados de los partidos\n",
     "data['Winner'] = (data['Score'].apply(lambda x: int(x.split('-')[0]) > int(x.split('-')[1]))).astype(int)\n",
@@ -173,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -289,21 +307,21 @@
        "4         Dortmund   Philips Stadion    Srđan Jovanović  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Cargar y revisar el contenido del archivo actualizado para la temporada 2023-2024\n",
-    "updated_data_path = '../data/partidos_2023-2024_limpio.csv'\n",
+    "updated_data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_2023-2024_limpio.csv'\n",
     "updated_data = pd.read_csv(updated_data_path)\n",
     "updated_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +423,7 @@
        "27  Bayern Munich  Estadio Santiago Bernabéu     NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,14 +438,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_20716\\2519762111.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  features_upcoming['Referee'] = 'Unknown'\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 41ms/step\n",
+      "1/1 [==============================] - 0s 232ms/step\n",
       "             Home           Away Predicted Winner\n",
       "24  Bayern Munich    Real Madrid        Away Wins\n",
       "25       Dortmund      Paris S-G        Home Wins\n",
@@ -439,19 +469,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_10592\\2519762111.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  features_upcoming['Referee'] = 'Unknown'\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_10592\\2519762111.py:16: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_20716\\2519762111.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  upcoming_matches['Predicted Winner'] = predicted_winners\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_10592\\2519762111.py:17: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_20716\\2519762111.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -485,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
       "Predicted Final Winner:   Real Madrid\n"
      ]
     }
