--- a/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
+++ b/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
@@ -76,8 +76,8 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar los datos\n",
-    "jugadores_df = pd.read_csv('../../data/jugadores_limpio.csv')\n",
-    "overall_df = pd.read_csv('../../data/overall_limpio.csv')\n",
+    "jugadores_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\jugadores_limpio.csv')\n",
+    "overall_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv')\n",
     "\n",
     "# Visualizar las primeras filas de cada DataFrame para entender su estructura\n",
     "jugadores_df_head = jugadores_df.head()\n",
@@ -413,7 +413,7 @@
    ],
    "source": [
     "# Cargar los datos de los equipos para la temporada actual\n",
-    "equipo_2023_2024_df = pd.read_csv('../../data/equipo_2023-2024_limpio.csv')\n",
+    "equipo_2023_2024_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\equipo_2023-2024_limpio.csv')\n",
     "\n",
     "# Visualizar las primeras filas para verificar la estructura de los datos\n",
     "equipo_2023_2024_df.head()"
@@ -1110,8 +1110,8 @@
    "outputs": [],
    "source": [
     "# Cargar los datos de equipos y jugadores\n",
-    "overall_df = pd.read_csv('../../data/overall_limpio.csv') \n",
-    "jugadores_df = pd.read_csv('../../data/jugadores_limpio.csv')"
+    "overall_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv') \n",
+    "jugadores_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\jugadores_limpio.csv')"
    ]
   },
   {
@@ -1284,7 +1284,7 @@
    "outputs": [],
    "source": [
     "# Preparar los datos de la temporada 2023-2024 para predicción\n",
-    "equipo_2023_2024_df = pd.read_csv('../../data/equipo_2023-2024_limpio.csv')  \n",
+    "equipo_2023_2024_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\equipo_2023-2024_limpio.csv')  \n",
     "X_pred = equipo_2023_2024_df[features_team_only]"
    ]
   },
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1370,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_15104\\1951426963.py:31: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35100\\3788676148.py:31: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1386,7 +1386,7 @@
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "\n",
     "# Cargar y preparar datos históricos\n",
-    "data_path = '../../data/overall_limpio.csv'\n",
+    "data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv'\n",
     "overall_data = pd.read_csv(data_path)\n",
     "features = ['W', 'D', 'L', 'GF', 'GA', 'GD', 'Pts']\n",
     "\n",
@@ -1403,7 +1403,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Cargar datos de la temporada actual 2023-2024\n",
-    "new_season_data_path = '../../data/equipo_2023-2024_limpio.csv'\n",
+    "new_season_data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\equipo_2023-2024_limpio.csv'\n",
     "season_2023_2024_data = pd.read_csv(new_season_data_path)\n",
     "semifinals_teams = season_2023_2024_data[season_2023_2024_data['Rk'] == 'SF']\n",
     "semifinals_features = semifinals_teams[features]\n",
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "6       D    0.057901"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
