--- a/UEFA/modelos/Aprendizaje supervisado/regresion_lineal.ipynb
+++ b/UEFA/modelos/Aprendizaje supervisado/regresion_lineal.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -181,7 +189,7 @@
        "4                    4.0  Germany  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +199,7 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar los datos históricos\n",
-    "overall_df = pd.read_csv('../../data/overall_limpio.csv')\n",
+    "overall_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv')\n",
     "\n",
     "# Visualizar las primeras filas de cada DataFrame para entender su estructura\n",
     "overall_df_head = overall_df.head()\n",
@@ -230,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +395,7 @@
    ],
    "source": [
     "# Cargar y preparar los datos de la temporada actual\n",
-    "current_season_df = pd.read_csv('../../data/equipo_2023-2024_limpio.csv')\n",
+    "current_season_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\equipo_2023-2024_limpio.csv')\n",
     "X_current_season = current_season_df[['GF', 'GA', 'GD']]\n",
     "\n",
     "# Predecir los puntos para la temporada actual\n",
