--- a/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
+++ b/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
@@ -1353,7 +1353,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
