--- a/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
+++ b/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -76,6 +80,15 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar los datos\n",
+    "# rutas_datos: Diccionario con las rutas de los archivos de datos\n",
+    "rutas_datos = {\n",
+    "    \"jugadores_df\": r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\jugadores_limpio.csv',\n",
+    "    \"overall_df\": r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv'\n",
+    "}\n",
+    "\n",
+    "jugadores_df = pd.read_csv(rutas_datos[\"jugadores_df\"])\n",
+    "overall_df = pd.read_csv(rutas_datos[\"overall_df\"])\n",
+    "\n",
     "jugadores_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\jugadores_limpio.csv')\n",
     "overall_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv')\n",
     "\n",
@@ -1353,11 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
