--- a/UEFA/modelos/Aprendizaje no supervisado/clustering.ipynb
+++ b/UEFA/modelos/Aprendizaje no supervisado/clustering.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "import pandas as pd\n",
     "# Cargar el dataset\n",
-    "data_path = '../../data/jugadores_limpio.csv'\n",
+    "data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\jugadores_limpio.csv'\n",
     "players_df = pd.read_csv(data_path)\n"
    ]
   },
